# agentic-personal-learning-assistant

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
agents/: learning_agent.py
data_vector_db/: chroma.sqlite3
services/: rag_service.py
