[project]
name = "agentic-personal-learning-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "langgraph>=1.2.9",
    "langsmith>=0.10.2",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
    "unstructured-inference>=1.6.13",
    "unstructured[pdf]>=0.24.1",
]
